--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -20,6 +21,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "mongose": "^0.0.2-security"
   }
 }
