--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.0",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "dotenv": "^16.3.1",
@@ -23,6 +24,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "mongose": "^0.0.2-security"
+    "mongose": "^0.0.2-security",
+    "yup": "^1.3.3"
   }
 }
