--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -25,6 +26,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "mongose": "^0.0.2-security",
+    "multer": "^1.4.5-lts.1",
     "yup": "^1.3.3"
   }
 }
