--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "mongose": "^0.0.2-security",
     "multer": "^1.4.5-lts.1",
